<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context =".fragment.attendance.AttendanceOverviewFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_attendance_overview"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/circularProgressBar"
            >

            <!--            <Spinner-->
<!--                android:id="@+id/button_top"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:backgroundTint="@color/cancelColour"-->
<!--                />-->
        </LinearLayout>

        <!--        <com.androidplot.pie.PieChart-->
<!--            android:id="@+id/circularProgressBar"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="220dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="32dp"-->
<!--            app:graphBackgroundColor="@color/ap_transparent"-->
<!--            app:layout_constraintBottom_toTopOf="@id/attendanceInfoRow"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->



        <!--    <Button-->
        <!--        android:id="@+id/button_bottom"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="Bottom"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent" />-->


        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="282dp"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            app:cpb_background_progressbar_color="@color/red"
            app:cpb_background_progressbar_width="16dp"
            app:cpb_progress_direction="to_left"
            app:cpb_progressbar_color="@color/green"
            app:cpb_progressbar_width="16dp"
            app:cpb_round_border="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:id="@+id/attendanceInfoRow"
            android:layout_width="338dp"
            android:layout_height="102dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularProgressBar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="7dp"
                app:cardElevation="2dp">
                <!-- Card contents -->
                <TextView
                    android:id="@+id/textViewOnTime"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#009688"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/onTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/attendance_onTime"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="84dp"
                android:layout_height="86dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="7dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <!-- Card contents -->
                <TextView
                    android:id="@+id/textViewLate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#F44336"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/attendance_late"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="7dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <!-- Card contents -->
                <TextView
                    android:id="@+id/textViewAbsent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/absentTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/attendance_absent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <Button
            android:id="@+id/clockOutBtn"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorClockInBtn"
            android:text="@string/attendance_clock_in_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceInfoRow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAttendance"
            android:layout_width="388dp"
            android:layout_height="303dp"
            android:layout_marginEnd="1dp"
            android:background="#FAF9F9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clockOutBtn"
            tools:listitem="@layout/attendence_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>