...
            android:id="@+id/action_attendanceClockFragment4_to_attendanceOverviewFragment"
            app:destination="@id/attendanceOverviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportAttendanceFragment"
        android:name="edu.singaporetech.hr.fragment.attendance.ReportAttendanceFragment"
        android:label="report_attendance_fragment"
        tools:layout="@layout/report_attendance_fragment" >
        <action
            android:id="@+id/action_reportAttendanceFragment_to_attendanceFragment"
            app:destination="@id/attendanceFragment" />
    </fragment>

...
