...
            android:id="@+id/card_view_clock"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toStartOf="@id/card_view_attendance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_notification">

            <TextView
                android:id="@+id/info_text_clock"
                android:layout_width="match_parent"
...
            android:id="@+id/card_payday_countdown"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@+id/card_remaining_leave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_clock">

            <TextView
                android:id="@+id/info_text_payday_countdown"
                android:layout_width="match_parent"
...
