...
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:text="@string/leave_balance"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonApplyLeave"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonApplyLeave"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLeaveRecord"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/leave_record"/>

    <Button
        android:id="@+id/buttonViewAllLeave"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:text="@string/leave_view_all_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
...
