<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.leave.LeaveRecordFragment"
        android:id="@+id/fragment_leave_record">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewLeaveRecordViewAll"
                android:layout_width="359dp"
                android:layout_height="568dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="124dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/leave_view_all_record" />

            <Button
                android:id="@+id/buttonCancelLeave"
                android:layout_width="172dp"
                android:layout_height="0dp"
                android:layout_marginBottom="17dp"
                android:text="@string/cancel_leave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>